--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -30,13 +30,17 @@
         </ol>
         <div class="carousel-inner">
             <div class="carousel-item active">
-            <img class="d-block w-100" src="Assets/img1.jpg" alt="First slide">
+                <img class="d-block w-100" src="Assets/img1.jpg" alt="First slide">
             </div>
             <div class="carousel-item">
-            <img class="d-block w-100" src="Assets/img2.jpg" alt="Second slide">
+                <img class="d-block w-100" src="Assets/img2.jpg" alt="Second slide">
             </div>
             <div class="carousel-item">
-            <img class="d-block w-100" src="Assets/img3.jpg" alt="Third slide">
+                <img class="d-block w-100" src="Assets/img4.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-caption d-none d-md-block">
+                <h2 class="flex-container" id="bannersubject">The skills you need to succeed</h2>
+                <button class="btn btn-success">More Info</button>
             </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -47,6 +51,61 @@
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
+    </div>
+    <div class="triangle"></div>
+    <div class="box">
+         <div id="learnerparagraph">Learn More About The Training Programs We Offer</div>
+    </div>
+    <div class="row">
+        <div class="column">
+            <a class="img-hover-zoom"  id="emplink" href="http://www.google.com" target="_blank">
+                <img id="empimg" src="Assets/employer_writing.jpg" alt="employer" width="750">
+            </a>
+        </div>
+        <div class="column">
+            <a class="img-hover-zoom"  id="stlink" href="http://www.google.com" target="_blank">
+                <img id="stimg" src="Assets/student_writing.jpg" alt="student" width="750" >
+            </a>
+        </div>
+    </div>
+    <div  class="flex-container">
+        <h3>ETI Is Your Solution</h3>
+    </div>
+    <div class="flex-container">
+        <p id="solutionbody">
+            San Diego Community Colleges District’s Employee Training Institute (ETI) provides expertise and skills development to organizations and individuals, helping you do whatever you do, and do it better!
+            We contribute to the economic development of the San Diego region to offer programs and services that complement those of the San Diego Community Colleges. 
+        </p>
+    </div>
+    <div class="flex-container">
+        <button type="button" class="btn btn-success">About ETI</button>
+    </div>
+    <hr>
+    <div class="flex-container bckblue">
+        <iframe width="1000" height="500" src="https://www.youtube.com/embed/08kKW7kWTK8"></iframe>
+    </div>
+    <hr>
+    <div class="flex-container">
+        <h3>Some of our clients</h3>
+    </div>
+    <div class="flex-containeritems">
+        <img class="logos" src="Assets/sdge.png" alt="" width="200px" height="150px">
+        <img class="logos" src="Assets/kaser.png" alt="" width="200px" height="150px">
+        <img class="logos" src="Assets/marine.png" alt="" width="200px" height="200px">
+        <img class="logos" src="Assets/sdcommunity.png" alt="" width="200px" height="200px">
+    </div>
+    <div id="container">
+        <div class="squarefooter"></div>
+        <div class="trianglefooter"></div>
+        <div class="trianglefooterleft"></div>
+    </div>
+    <div class="green-rectangle">
+        <p id="footerinfo">
+            Employee Training Institue <br>
+            <a href="https://www.google.com/maps/place/Educational+Cultural+Complex/@32.6991351,-117.1037529,17z/data=!3m1!4b1!4m5!3m4!1s0x80d953c70da4a5bf:0xf48780b57976dd16!8m2!3d32.6991351!4d-117.1015642">4343 Ocean View Blvd. <br>
+            San Diego CA 92113 <br></a>
+            613.388.1250<br>
+        </p>
     </div>
 
 </body>
