--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="CSS/stylesheet.css">
 
 </head>
-<body>
+<body><!--rachel comment-->
     <div class="topbar">619-388-4967</div>
     
     <div class="twelve columns">
