--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -35,7 +35,7 @@
                             <a class="nav-link" href="#">Students</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About ETI</a>
+                            <a class="nav-link" href="about.html" target="_blank">About ETI</a>
                         </li>
                     </ul>
                 </nav>
