--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -112,9 +112,9 @@
                 <button type="button" class="btn btn-success btnsuccess" style="margin-bottom: 5px;">About ETI</button>
             </div>
         </div>
-        <div class="row">
-            <div class=" col text-center bckblue"> <!-- changed from container flex container -->
-                <iframe width="1000" height="500" class="img-fluid" src="https://www.youtube.com/embed/08kKW7kWTK8"></iframe> <!-- added img-fluid-->
+        <div class="row videorow">
+            <div class="col text-center bckblue"> <!-- changed from container flex container -->
+                <iframe width="100%" height="500" src="https://www.youtube.com/embed/08kKW7kWTK8"></iframe> <!-- added img-fluid-->
             </div>
         </div>
         <div class="row">
