--- a/Final_Project_Code/about.html
+++ b/Final_Project_Code/about.html
@@ -43,7 +43,7 @@
         <main>
         <div class="row">
             <div class="col">
-                <h2 class="reshaping">Reshaping the Landscape of Learning Today</h2>
+                <h2 class="text-center">Reshaping the Landscape of Learning Today</h2>
             </div>
         </div>
         <div class="row">
