--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -145,15 +145,17 @@
         <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" id="partner-4"><img class="logos img-thumbnail"src="Assets/marine.png" alt="" class="img-thumbnail"></div>
     </div>
     <div class="row mission">
-        <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12" id="partner-5"><p>We provide wrap-around services such as one-on-one coaching, pre and post-work, needs assessments, case management services, academic and career counseling, tutoring series, and post-program evaluations.</p></div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="partner-6"><p>We understand how adults learn. Andragogy is our primary area of expertise.</p></div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="partner-7"><p>We provide training programs fully online, in-person or in blended model formats.</p></div>
+        <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12" id="partner-5"><img class="logos img-thumbnail"src="Assets/marriott.png" alt="" class="img-thumbnail"></div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="partner-6"><img class="logos img-thumbnail"src="Assets/lamesa.png" alt="" class="img-thumbnail"></div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="partner-7"><img class="logos img-thumbnail"src="Assets/sd.png" alt="" class="img-thumbnail"></div>
     </div>
     <div class="row mission">
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12" id="partner-8"><p>We differentiate instruction to meet the needs of the individual learning.</p></div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="partner-9"><p>We meet each learner at their level of comprehension and build upon their prior experience.</p></div>
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="partner-10"><p>We have a size and scope that sets us apart, offering thousands of courses, certificates, and degree options offered by the four colleges that comprise the San Diego Community College District, from aviation and nursing to coding and HVAC.</p></div>
+        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12" id="partner-8"><img class="logos img-thumbnail"src="Assets/utcaero.png" alt="" class="img-thumbnail"></div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="partner-9"><img class="logos img-thumbnail"src="Assets/hshmc.jpg" alt="" class="img-thumbnail"></div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="partner-10"><img class="logos img-thumbnail"src="Assets/helix.png" alt="" class="img-thumbnail"></div>
     </div>
+    
+<!-- Grid row -->
 
     </div>
     <footer>
