about and css updates
nav, hr border and card updates

--- a/Final_Project_Code/about.html
+++ b/Final_Project_Code/about.html
@@ -21,10 +21,6 @@
                     <div class="topbar">619-388-4967</div>
                     <img class="logoimg" src="Assets/logo.png" alt="logo">
                 </header>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col"> 
                 <nav>
                     <ul class="nav justify-content-center">
                         <li class="nav-item">
@@ -48,7 +44,7 @@
         </div>
         <div class="row">
             <div class="col">
-                <img src="/Assets/group_2.jpg" class="img-fluid room" alt="group photo">
+                <img src="./Assets/group_2.jpg" class="img-fluid room" alt="group photo">
             </div>
         </div>
     </div>
@@ -56,7 +52,7 @@
             <div class="row mission">
                 <div class="col-md-4 col-sm-12">
                     <div class="title-left">
-                        <h3>About<br>Employee Training Institute</h3>
+                        <h3 class="border-bottom border-left">About<br>Employee Training Institute</h3>
                     </div>
                 </div>
                 <div class="col-md-8 col-sm-12">
@@ -78,7 +74,7 @@
             <div class="row mission">
                 <div class="col-md-4 col-sm-12">
                     <div class="title-left">
-                        <h3>Our <br>Mission</h3> 
+                        <h3 class="border-bottom border-left">Our <br>Mission</h3> 
                     </div>
                 </div>
                 <div class="col-md-8 col-sm-12">
@@ -90,7 +86,7 @@
             <div class="row mission">
                 <div class="col-md-4 col-sm-12">
                     <div class="title-left">
-                        <h3>Our <br>Approach</h3>
+                        <h3 class="border-bottom border-left">Our <br>Approach</h3>
                     </div>
                 </div>
                 <div class="col-md-8 col-sm-12">
@@ -111,7 +107,7 @@
             <div class="row mission">
                 <div class="col-md-4 col-sm-12">
                     <div class="title-left">
-                        <h3>Why Partner With ETI?</h3>
+                        <hh3 class="border-bottom border-left">Why Partner With ETI?</hh3>
                     </div>
                 </div>
                 <div class="col-md-8 col-sm-0 mission"></div>
@@ -119,31 +115,31 @@
             <div class="row mission">
                 <div class="col-md-4 col-sm-12 why-card">
                     <div class="card">
-                    <img src="/Assets/learning.jpg" class="card-img-top" alt="card">
+                    <img src="./Assets/learning.jpg" class="card-img-top" alt="card">
                         <div class="card-body">
                             <p class="card-text">We know the local market, understand San Diego’s business trends and economies.</p>
                             <p class="card-text">Our team works with regional subject matter experts to customize programs.</p>
                             <p class="card-text">We deliver specific return-on-investment benchmarks that businesses seek.</p>
-                            <p class="card-text">ETI understands how adults learn. Andragogy is our primary area of expertise.</p>
+                            <p class="card-text">We meet each learner at their level of comprehension and builds upon their prior experience.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12 why-card">
                     <div class="card">
-                    <img src="/Assets/eti_serve_businesses2.jpg" class="card-img-top" alt="card">
+                    <img src="./Assets/eti_serve_businesses2.jpg" class="card-img-top" alt="card">
                         <div class="card-body">
                             <p class="card-text">We provide training programs fully online, in-person or in blended model formats.</p>
-                            <p class="card-text">We believe in applied learning that is agile and fits the needs of your organization today,</p>
+                            <p class="card-text">We believe in applied learning that is agile and fits the needs of your organization.</p>
                             <p class="card-text">Our instructor's provide wrap-around services such as one-on-one coaching, pre and post-work, needs assessments, case management services, academic and career counseling, tutoring series, and post-program evaluations.</p>
                         </div>
                     </div>  
                 </div>
                 <div class="col-md-4 col-sm-12 why-card">
                     <div class="card">
-                    <img src="/Assets/succession.jpg" class="card-img-top" alt="card">
+                    <img src="./Assets/succession.jpg" class="card-img-top" alt="card">
                         <div class="card-body">
                             <p class="card-text">ETI differentiates instruction to meet the needs of the individual learning.</p>
-                            <p class="card-text">We meet each learner at their level of comprehension and builds upon their prior experience.</p>
+                            <p class="card-text">ETI understands how adults learn. Andragogy is our primary area of expertise.</p>
                             <p class="card-text">ETI has a size and scope that sets us apart,offering thousands of courses, certificates, and degree options offered by the four colleges that comprise the San Diego Community College District, from aviation and nursing to coding and HVAC.</p>
                         </div>
                     </div>
@@ -159,13 +155,13 @@
                 </div>
                 <div class="col-md-4 col-sm-12 talk">
                     <a href="https://www.facebook.com/">
-                    <img class="img-thumbnail" src="/Assets/facebooklogoBW.png" alt="facebook logo">
+                    <img class="img-thumbnail" src="./Assets/facebooklogoBW.png" alt="facebook logo">
                     </a>
                     <a href="https://twitter.com/?lang=en">
-                    <img class="img-thumbnail" src="/Assets/twitterlogoBW.png" alt="twitter logo">
+                    <img class="img-thumbnail" src="./Assets/twitterlogoBW.png" alt="twitter logo">
                     </a>
                     <a href="https://www.linkedin.com/">
-                    <img class="img-thumbnail" src="/Assets/linkedInlogo4.png" alt="linked in logo">
+                    <img class="img-thumbnail" src="./Assets/linkedInlogo4.png" alt="linked in logo">
                     </a>
                 </div>
             </div>
