updated nav, logos, images
lots of updates

--- a/Final_Project_Code/about.html
+++ b/Final_Project_Code/about.html
@@ -43,8 +43,8 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
-                <img src="./Assets/group_2.jpg" class="img-fluid room" alt="group photo">
+            <div class="col text-center">
+                <img src="./Assets/business.jpg" class="img-fluid" alt="">
             </div>
         </div>
     </div>
