--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -12,7 +12,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="CSS/stylesheet.css">
-
 </head>
 <body>
     <div class="container-fluid">
@@ -22,10 +21,6 @@
                     <div class="topbar">619-388-4967</div>
                     <img class="logoimg" src="Assets/logo.png" alt="logo">
                 </header>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col"> 
                 <nav>
                     <ul class="nav justify-content-center">
                         <li class="nav-item">
@@ -78,7 +73,7 @@
     <!-- Triangle -->
     <div class="container">
         <div class="row">
-            <div class="col-md-12 col-sm-12"> <!-- removed box -->
+            <div class="col-md-12 col-sm-12 mission room"> <!-- removed box -->
                 <p id="learnerparagraph">Learn More About The Training Programs We Offer</p>
             </div>
         </div>
@@ -96,11 +91,11 @@
         </div>
         <div class="row">
                 <div class="col text-center">
-                    <h1 class="ETISolution">ETI Is Your Solution</h1>
+                    <h1 class="ETISolution mission room">ETI Is Your Solution</h1>
                 </div>
         </div>
         <div class="row">
-            <div class="col text-center">
+            <div class="col text-center mission room">
                 <p id="solutionbody">
                     San Diego Community Colleges District’s Employee Training Institute (ETI) provides expertise and skills development to organizations and individuals, helping you do whatever you do, and do it better!
                     We contribute to the economic development of the San Diego region to offer programs and services that complement those of the San Diego Community Colleges. 
@@ -108,20 +103,20 @@
             </div>
         </div>
         <div class="row">
-            <div class="col text-center">
+            <div class="col-12 text-center room">
                 <button type="button" class="btn btn-success btnsuccess" style="margin-bottom: 5px;">About ETI</button>
             </div>
         </div>
-        <div class="row">
-            <div class=" col text-center bckblue"> <!-- changed from container flex container -->
-                <iframe width="1000" height="500" class="img-fluid" src="https://www.youtube.com/embed/08kKW7kWTK8"></iframe> <!-- added img-fluid-->
+        <!--<div class="row">
+            <div class=" col text-center bckblue"> 
+                <iframe width="1000" height="500" class="img-fluid" src="https://www.youtube.com/embed/08kKW7kWTK8"></iframe> 
             </div>
-        </div>
-        <div class="row">
-            <div class="col text-center"> <!-- changed from container flex container -->
+        </div>-->
+        <!--<div class="row">
+            <div class="col text-center"> 
                 <h3>Some of our clients</h3>
             </div>
-        </div>
+        </div>-->
        <!--
         <div class="row">
             <div class="col-3">
@@ -138,22 +133,39 @@
             </div>
         </div>
     -->
-    <div class="row mission">
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12" id="partner-1"><img class="logos img-thumbnail" src="Assets/sdge.png" alt=""></div>
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12" id="partner-2"><img class="logos img-thumbnail" src="Assets/kaser.png" alt="" class="img-thumbnail"></div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="partner-3"><img class="logos img-thumbnail" src="Assets/sdcommunity.png" alt="" class="img-thumbnail"></div>
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12" id="partner-4"><img class="logos img-thumbnail"src="Assets/marine.png" alt="" class="img-thumbnail"></div>
+    <div class="row mission text-center room">
+        <div class="col-4">
+            <iframe src="https://www.youtube.com/embed/08kKW7kWTK8"></iframe>
+        </div>
+        <div class="col-8">
+            <h3 class="text-left border-left border-bottom">Some of our clients</h3>
+            <img class="logos img-thumbnail" src="./Assets/kaser.png" alt="" class="img-thumbnail">
+            <img class="logos img-thumbnail" src="./Assets/sdcommunity.png" alt="" class="img-thumbnail">
+            <img class="logos img-thumbnail" src="./Assets/marines.jpg" alt="" class="img-thumbnail">
+            <img class="logos img-thumbnail" src="./Assets/marriott.png" alt="" class="img-thumbnail">
+            <img class="logos img-thumbnail" src="./Assets/lamesa.png" alt="" class="img-thumbnail"><br>
+            <img class="logos img-thumbnail" src="./Assets/sd.png" alt="" class="img-thumbnail">
+            <img class="logos img-thumbnail" src="./Assets/sdge.png" class="img-thumbnail" alt="">
+            <img class="logos img-thumbnail" src="./Assets/utcaero.png" alt="" class="img-thumbnail">
+            <img class="logos img-thumbnail" src="./Assets/helix.png" alt="" class="img-thumbnail">
+        </div>
     </div>
-    <div class="row mission">
-        <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12" id="partner-5"><img class="logos img-thumbnail"src="Assets/marriott.png" alt="" class="img-thumbnail"></div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="partner-6"><img class="logos img-thumbnail"src="Assets/lamesa.png" alt="" class="img-thumbnail"></div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="partner-7"><img class="logos img-thumbnail"src="Assets/sd.png" alt="" class="img-thumbnail"></div>
+    <!--<div class="row mission text-center">  
+        <div class="col-md-4 col-sm-4"><img class="logos img-thumbnail" src="./Assets/kaser.png" alt="" class="img-thumbnail"></div>
+        <div class="col-md-4 col-sm-4"><img class="logos img-thumbnail" src="./Assets/sdcommunity.png" alt="" class="img-thumbnail"></div>
+        <div class="col-md-4 col-sm-4"><img class="logos img-thumbnail" src="./Assets/marines.jpg" alt="" class="img-thumbnail"></div>
     </div>
-    <div class="row mission">
-        <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12" id="partner-8"><img class="logos img-thumbnail"src="Assets/utcaero.png" alt="" class="img-thumbnail"></div>
-        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="partner-9"><img class="logos img-thumbnail"src="Assets/hshmc.jpg" alt="" class="img-thumbnail"></div>
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" id="partner-10"><img class="logos img-thumbnail"src="Assets/helix.png" alt="" class="img-thumbnail"></div>
+    <div class="row mission text-center">
+        <div class="col-md-4 col-sm-4"><img class="logos img-thumbnail" src="./Assets/marriott.png" alt="" class="img-thumbnail"></div>
+        <div class="col-md-4 col-sm-4"><img class="logos img-thumbnail" src="./Assets/lamesa.png" alt="" class="img-thumbnail"></div>
+        <div class="col-md-4 col-sm-4"><img class="logos img-thumbnail" src="./Assets/sd.png" alt="" class="img-thumbnail"></div>
     </div>
+    <div class="row mission text-center">
+        <div class="col-md-4 col-sm-4"><img class="logos img-thumbnail" src="./Assets/sdge.png" alt="" class="img-thumbnail"></div>
+        <div class="col-md-4 col-sm-4"><img class="logos img-thumbnail" src="./Assets/utcaero.png" alt="" class="img-thumbnail"></div>
+        <div class="col-md-4 col-sm-4"><img class="logos img-thumbnail" src="./Assets/helix.png" alt="" class="img-thumbnail"></div>
+    </div>-->
+
     
 <!-- Grid row -->
 
@@ -166,13 +178,13 @@
                 </div>
                 <div class="col-md-4 col-sm-12 talk">
                     <a href="https://www.facebook.com/">
-                    <img class="img-thumbnail" src="/Assets/facebooklogoBW.png" alt="facebook logo">
+                    <img class="img-thumbnail" src="./Assets/facebooklogoBW.png" alt="facebook logo">
                     </a>
                     <a href="https://twitter.com/?lang=en">
-                    <img class="img-thumbnail" src="/Assets/twitterlogoBW.png" alt="twitter logo">
+                    <img class="img-thumbnail" src="./Assets/twitterlogoBW.png" alt="twitter logo">
                     </a>
                     <a href="https://www.linkedin.com/">
-                    <img class="img-thumbnail" src="/Assets/linkedInlogo4.png" alt="linked in logo">
+                    <img class="img-thumbnail" src="./Assets/linkedInlogo4.png" alt="linked in logo">
                     </a>
                 </div>
             </div>
