changed image on about page

--- a/Final_Project_Code/about.html
+++ b/Final_Project_Code/about.html
@@ -21,6 +21,10 @@
                     <div class="topbar">619-388-4967</div>
                     <img class="logoimg" src="Assets/logo.png" alt="logo">
                 </header>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
                 <nav>
                     <ul class="nav justify-content-center">
                         <li class="nav-item">
@@ -39,23 +43,23 @@
         <main>
         <div class="row">
             <div class="col">
-                <h2 class="text-center">Reshaping the Landscape of Learning Today</h2>
+                <h2 class="text-center room">Reshaping the Landscape of Learning Today</h2>
             </div>
         </div>
         <div class="row">
             <div class="col text-center">
-                <img src="./Assets/business.jpg" class="img-fluid" alt="">
+                <img src="Assets/banner.jpg" class="img-fluid" alt="">
             </div>
         </div>
     </div>
     <div class="container">
             <div class="row mission">
-                <div class="col-md-4 col-sm-12">
+                <div class="col-md-4 col-sm-12 mission">
                     <div class="title-left">
                         <h3 class="border-bottom border-left">About<br>Employee Training Institute</h3>
                     </div>
                 </div>
-                <div class="col-md-8 col-sm-12">
+                <div class="col-md-8 col-sm-12 mission">
                     <div class="about-text">
                         <div id="summary">
                             <p class="collapse" id="collapseSummary">
@@ -107,7 +111,7 @@
             <div class="row mission">
                 <div class="col-md-4 col-sm-12">
                     <div class="title-left">
-                        <hh3 class="border-bottom border-left">Why Partner With ETI?</hh3>
+                        <h3 class="border-bottom border-left">Why Partner With ETI?</h3>
                     </div>
                 </div>
                 <div class="col-md-8 col-sm-0 mission"></div>
@@ -129,7 +133,7 @@
                     <img src="./Assets/eti_serve_businesses2.jpg" class="card-img-top" alt="card">
                         <div class="card-body">
                             <p class="card-text">We provide training programs fully online, in-person or in blended model formats.</p>
-                            <p class="card-text">We believe in applied learning that is agile and fits the needs of your organization.</p>
+                            <p class="card-text">We believe in applied learning that is agile and fits the needs of your organization and students.</p>
                             <p class="card-text">Our instructor's provide wrap-around services such as one-on-one coaching, pre and post-work, needs assessments, case management services, academic and career counseling, tutoring series, and post-program evaluations.</p>
                         </div>
                     </div>  
