--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -21,6 +21,10 @@
                     <div class="topbar">619-388-4967</div>
                     <img class="logoimg" src="Assets/logo.png" alt="logo">
                 </header>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
                 <nav>
                     <ul class="nav justify-content-center">
                         <li class="nav-item">
