Add more clients

--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -24,6 +24,10 @@
         </div>
         <div class="row">
             <div class="col">
+                <img id="logoimg" src="Assets/logo.png" alt="logo">
+            </div>
+
+            <div class="col">
                 <nav>
                     <ul class="nav justify-content-left">
                         <li class="nav-item">
@@ -38,6 +42,7 @@
                     </ul>
                 </nav>
             </div>
+
         </div>
         <div class="row">
             <div class="col"> 
@@ -110,20 +115,27 @@
             </div>
         </div>
     <div class="row mission text-center room">
-        <div class="col-4">
-            <iframe src="https://www.youtube.com/embed/08kKW7kWTK8"></iframe>
+        <div class="col-md-5 col-sm-12">
+            <iframe id="video" src="https://www.youtube.com/embed/08kKW7kWTK8"></iframe>
         </div>
-        <div class="col-8">
+        <div class="logosection col-md-7 col-sm-12">
             <h3 class="text-left border-left border-bottom">Some of our clients</h3>
-            <img class="logos img-thumbnail" src="./Assets/kaser.png" alt="" class="img-thumbnail">
+            <img class="logos img-thumbnail" src="./Assets/padre.png" alt="" class="img-thumbnail">
+ 
             <img class="logos img-thumbnail" src="./Assets/sdcommunity.png" alt="" class="img-thumbnail">
             <img class="logos img-thumbnail" src="./Assets/marines.jpg" alt="" class="img-thumbnail">
-            <img class="logos img-thumbnail" src="./Assets/marriott.png" alt="" class="img-thumbnail">
-            <img class="logos img-thumbnail" src="./Assets/lamesa.png" alt="" class="img-thumbnail"><br>
+            <img class="logos img-thumbnail" src="./Assets/palomar.png" alt="" class="img-thumbnail">
+
+            <img class="logos img-thumbnail" src="./Assets/lamesa.png" alt="" class="img-thumbnail">
+
             <img class="logos img-thumbnail" src="./Assets/sd.png" alt="" class="img-thumbnail">
             <img class="logos img-thumbnail" src="./Assets/sdge.png" class="img-thumbnail" alt="">
             <img class="logos img-thumbnail" src="./Assets/utcaero.png" alt="" class="img-thumbnail">
             <img class="logos img-thumbnail" src="./Assets/helix.png" alt="" class="img-thumbnail">
+
+            <img class="logos img-thumbnail" src="./Assets/marriott.png" alt="" class="img-thumbnail">
+            <img class="logos img-thumbnail" src="./Assets/otay.png" class="img-thumbnail" alt="">
+            <img class="logos img-thumbnail" src="./Assets/kaser.png" alt="" class="img-thumbnail">
         </div>
     </div>
     </div>
