background color change
added bg colors

--- a/Final_Project_Code/about.html
+++ b/Final_Project_Code/about.html
@@ -47,36 +47,43 @@
             </div>
             <div class="row mission room align-items-center">
                 <div class="col">
-                    <h3 class="text-center room">Reshaping the Landscape of Learning Today</h3>
+                    <h2 class="text-center room changeteal">Reshaping the Landscape of Learning Today</h2>
                 </div>
             </div>
-            <div class="row">
+            <div class="row mission room">
                 <div class="col text-center">
                     <img src="Assets/banner.jpg" class="img-fluid" alt="">
+                </div>
+            </div>
+            <div class="row mission room">
+                <div class="col">
+                    <h4 class="text-center changeyellowwhite">
+                        Next Level Education and Training
+                    </h4>
                 </div>
             </div>
         </div>
     </header>
     <main>
         <div class="container">
-            <div class="row mission">
+            <div class="row mission room">
                 <div class="col-5"> 
                     <h4 class="border-bottom border-left">Our <br>Mission</h4> 
                 </div>
             </div>
-            <div class="row mission"> 
+            <div class="row mission room"> 
                 <div class="col-md-10 offset-md-2">
                     <p>Provide expertise and skill development to organizations and individuals, helping you do whatever you do, and do it better.<br>
                     Contribute to the economic development of San Diego region.<br>
                     Offer programs and services that complement those of the San Diego Community Colleges.</p>
                 </div>
             </div>
-            <div class="row mission">
+            <div class="row mission room">
                 <div class="col-5"> 
                     <h4 class="border-bottom border-left">About<br>Employee Training Institute</h4>
                 </div>
             </div>
-            <div class="row mission"> 
+            <div class="row mission room"> 
                 <div class="col-md-10 offset-md-2">
                     <div id="summary">
                         <p class="collapse" id="collapseSummary">
@@ -91,12 +98,12 @@
                     </div>
                 </div>
             </div>
-            <div class="row mission">
+            <div class="row mission room">
                 <div class="col-5">
                     <h4 class="border-bottom border-left">Our <br>Approach</h4>
                 </div>
             </div>
-            <div class="row mission"> 
+            <div class="row mission room"> 
                 <div class="col-md-10 offset-md-2">
                 <h5>Steps For Success</h5>
                     <div id="summary1">
@@ -112,7 +119,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mission">
+            <div class="row mission room">
                 <div class="col-5"> 
                     <h4 class="border-bottom border-left">Why Partner With ETI?</h4>
                 </div>
@@ -120,8 +127,8 @@
         </div>
     </main>
     <article>
-        <div class="container"> 
-            <div class="row mission">
+        <div class="container-fluid mission room bgteal"> 
+            <div class="row mission room">
                 <div class="col-md-4 col-sm-12 why-card">
                     <div class="card">
                     <img src="./Assets/learning.jpg" class="card-img-top" alt="card">
@@ -143,7 +150,7 @@
                         </div>
                     </div>  
                 </div>
-                <div class="col-md-4 col-sm-12 why-card">
+                <div class="col-md-4 col-sm-12 why-card"> 
                     <div class="card">
                     <img src="./Assets/succession.jpg" class="card-img-top" alt="card">
                         <div class="card-body">
@@ -158,7 +165,7 @@
     </article>
     <footer>
         <div class="container-fluid">
-            <div class="row social">
+            <div class="row mission room social">
                 <div class="col-md-8 col-12">
                     <h4 class="invest">Invest In Your Future <br>Talk To Us</h4>
                 </div>
