--- a/Final_Project_Code/foremployers.html
+++ b/Final_Project_Code/foremployers.html
@@ -62,10 +62,10 @@
             </nav>-->
         <div class="row mission room align-items-center">
             <div class="col">
-                <h3 class="text-center room">Employers | Contract Education</h3>
+                <h2 class="text-center room changeteal">Employers | Contract Education</h2>
             </div>
         </div>
-        <div class="row">
+        <div class="row mission room">
             <div class="col text-center">
                 <img src="Assets/network.jpg" class="img-fluid" alt="">
             </div>
@@ -73,13 +73,20 @@
     </div>
 </header>
     <main>
-        <div class="container"> 
-            <div class="row mission">
+        <div class="container-fluid">
+            <div class="row mission room">
+                <div class="col">
+                    <h4 class="text-center changeyellowwhite">We believe in applied learning that is agile and fits the needs of your organization today.</h4> 
+                </div>
+            </div> 
+        </div>
+            <div class="container"> 
+            <div class="row mission room">
                 <div class="col-5"> 
                     <h4 class="border-bottom border-left">What is<br> Contract Education </h4>
                 </div>
             </div>
-            <div class="row mission"> 
+            <div class="row mission room"> 
                 <div class="col-md-10 offset-md-2">
                     <div id="summary">
                         <p class="collapse" id="collapseSummary">
@@ -90,12 +97,12 @@
                     </div>
                 </div>
             </div>
-            <div class="row mission">
+            <div class="row mission room">
                 <div class="col-5"> 
                     <h4 class="border-bottom border-left"> Why<br> Contract Education Matters</h4>
                 </div>
             </div>
-            <div class="row mission"> 
+            <div class="row mission room"> 
                 <div class="col-md-10 offset-md-2">
                     <div id="summary1">
                         <p class="collapse" id="collapseSummary1">
@@ -107,10 +114,31 @@
             </div> 
         </div>
     </main>
+    <aside>
+        <div class="container-fluid">
+            <div class="row mission room">
+                <div class="col mission room">
+                    <h3 class=" text-center changeyellowwhite">We are not satisfied until our clients are satisfied!</h3>
+                </div>
+            </div>
+        </div> 
+        <div class="container"> 
+            <div class="row mission"> 
+                <div class="col">
+                    <img src="/Assets/AdobeStock_56409179_lean2.png" alt="lean">
+                </div>
+                <div class="col">
+                    <p class="text-left">According to California Education Code Section 78020,  Contract education means those situations in which a community college district contracts with a public or private entity for the purposes of providing instruction or services or both by the community college."</p>
+                    <p>ETI aims to "work systematically with collaborative partners and companies to strengthen the organization's effectiveness, competitiveness, and profitability through education, training, and services that contribute to continuous workforce improvement." (California Education Code Section 66010.43)</p>
+                    <p>With unparalleled access to curriculum and subject matter experts, flexible scheduling and delivery formats, plus projects managed through one consistent source, ETI manages a wide scope of projects for a business of any size or industry.</p>
+                </div>
+            </div>
+        </div>
+    </aside>
 
     <footer>
         <div class="container-fluid">
-            <div class="row social">
+            <div class="row mission room social">
                 <div class="col-md-8 col-12">
                     <h4 class="invest">Invest In Your Future <br>Talk To Us</h4>
                 </div>
