--- a/Final_Project_Code/index.html
+++ b/Final_Project_Code/index.html
@@ -44,7 +44,7 @@
             </div>
         </div>-->
         <!-- new navbar w/logo-->
-        <div class="row">
+        <div class="row mission room">
             <div class="col d-flex justify-content-center">            
                 <nav class="navbar navbar-expand-md navbar-light bg-light">
                     <a class="navbar-brand" href="index.html">
@@ -69,7 +69,12 @@
                 </nav>
             </div>
         </div>
-        <div class="row">
+        <div class="row mission room">
+            <div class="col">
+                <h2 class="text-center changeteal">Employee Training Institute</h2>
+            </div>
+        </div>
+        <div class="row mission room">
             <div class="col"> 
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
                     <ol class="carousel-indicators">
@@ -103,10 +108,13 @@
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col mission room">
-                <p id="learnerparagraph">Learn More About The Training Programs We Offer</p>
+    <div class="container-fluid">
+        <div class="row mission room">
+            <div class="col">
+                <h4 class="text-center changeyellowwhite">
+                    Learn More About The Training Programs We Offer
+                </h4>
+                <!--<p id="learnerparagraph">Learn More About The Training Programs We Offer</p>-->
             </div>
         </div> 
         <!--<div class="row mission">
@@ -115,12 +123,12 @@
             </div>
         </div>-->
         <div class="row mission room">
-            <div class="col-6">
+            <div class="col-4 offset-md-1">
                 <a class="img-hover-zoom"  id="emplink" href="http://www.google.com" target="_blank">
                     <img id="empimg" class="img-fluid" src="Assets/employer_writing.jpg" alt="employer" width="750">
                 </a>
             </div>
-            <div class="col-6">
+            <div class="col-4 offset-md-2">
                 <a class="img-hover-zoom"  id="stlink" href="http://www.google.com" target="_blank">
                     <img id="stimg" class="img-fluid" src="Assets/student_writing.jpg" alt="student" width="750" >
                 </a>
@@ -159,12 +167,12 @@
             </div>
         </div>-->
 
-        <div class="row mission">
+        <div class="row mission room"> 
             <div class="col-5"> 
                 <h4 class="border-bottom border-left">Our<br> Clients</h4>
             </div>
         </div>
-        <div class="row mission"> 
+        <div class="row mission room"> 
             <div class="col-md-10 offset-md-2">
             <img class="logos img-thumbnail" src="./Assets/padre.png" alt="" class="img-thumbnail">
             <img class="logos img-thumbnail" src="./Assets/sdcommunity.png" alt="" class="img-thumbnail">
@@ -183,7 +191,7 @@
     </div>
     <footer>
         <div class="container-fluid">
-            <div class="row social">
+            <div class="row mission room social">
                 <div class="col-md-8 col-12">
                     <h4 class="invest">Invest In Your Future <br>Talk To Us</h4>
                 </div>
